--- a/index.html
+++ b/index.html
@@ -19,7 +19,27 @@
     </head>
 
     <body>
-        <div class="container"></div>
+        <div class="container">
+            <h2>Bài tập thực hành chức năng click</h2>
+            <img id="hinhAnh" src="https://i.pinimg.com/550x/2a/c0/46/2ac0460aca1e2021b501d289033fdda2.jpg" alt="" />
+            <button id="btnClick" class="btn btn-dark">Click vào để đổi hình ảnh</button> 
+            <p>Lorem ipsum dolor sit amet.</p>
+            <div class="flex_container"> 32:31</div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- Bootstrap JavaScript Libraries -->
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
